solve Day 2 Part 1

--- a/Day2Tests/Day2Tests.csproj
+++ b/Day2Tests/Day2Tests.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="Shouldly" Version="4.2.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj" />
+    <ProjectReference Include="..\Day2\Day2.csproj" />
+  </ItemGroup>
+
 </Project>
